syntax = "proto3";
package review;
option csharp_namespace = "Review.Grpc";

// Review entity
message Review {
    string id = 1;             
    string user_id = 2;         
    string product_id = 3;     
    string order_id = 4;        

    int32 rating = 5;          
    string content = 6;        

    repeated string medias = 7; //images, video

    string created_at = 8;    
    string updated_at = 9;      
    int32 update_count = 10; // max = 1;  
}

// Dashboard 
message DashboardReviewStats {
    int32 total_reviews = 1;                
    double average_rating = 2;              
    map<int32, int32> rating_distribution = 3; 
}

message GetDashboardReviewStatsRequest {
    string product_id = 1;
}

message GetDashboardReviewStatsResponse {
    DashboardReviewStats stats = 1;
}

// Create
message CreateReviewRequest {
    Review review = 1;
}

message CreateReviewResponse {
    Review review = 1;
}


// Get
message GetReviewRequest {
    string id = 1;
}

message GetReviewResponse {
    Review review = 1;
}


// Get List by Product
message ListReviewByProductRequest {
    string product_id = 1;
    int32 page = 2;  
    int32 limit = 3; 
    string sort_by = 4;   
    string sort_order = 5;
}

message ListReviewByProductResponse {
    repeated Review reviews = 1;
    int32 total = 2;    
    int32 page = 3;
    int32 limit = 4;
}

// Delete
message DeleteReviewRequest {
    string id = 1;
    string user_id = 2; 
}

message DeleteReviewResponse {
    bool success = 1;
}


// Seller Rating Summary
message GetSellerRatingRequest {
    string seller_id = 1;
}

message SellerRatingStats {
    double average_rating = 1;
    int32 total_reviews = 2;
    map<int32, int32> rating_distribution = 3; 
}

message GetSellerRatingResponse {
    SellerRatingStats stats = 1;
}

service ReviewService {
    rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);
    rpc GetReview(GetReviewRequest) returns (GetReviewResponse);
    rpc ListReviewByProduct(ListReviewByProductRequest) returns (ListReviewByProductResponse);
    rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse);
    rpc GetDashboardReviewStats(GetDashboardReviewStatsRequest) returns (GetDashboardReviewStatsResponse);
    rpc GetSellerRating(GetSellerRatingRequest) returns (GetSellerRatingResponse);

}
